<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue"
    android:paddingBottom="30dp"
    android:paddingTop="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/homeTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tasks"
            android:textColor="#FFFFFF"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/searchIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:contentDescription="@string/search_icon"
            android:focusable="true"
            android:src="@drawable/baseline_search_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#FFFFFF" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/homeRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeTask"
            android:layout_marginBottom="20dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:text="@string/new_task1"
        android:textColor="#000000"
        android:layout_marginBottom="25dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="#1DE9B6"
        app:elevation="8dp"
        app:icon="@drawable/baseline_add_24"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>