<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1B3A2F"
            android:paddingTop="10dp"
            app:navigationIcon="@drawable/baseline_arrow_back_ios_24"
            app:navigationIconTint="@color/white"
            app:title="">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/search_amp_filter"
                android:textColor="@color/textWhite"
                android:textSize="20sp"
                android:textStyle="bold" />
        </com.google.android.material.appbar.MaterialToolbar>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/box1"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/searchIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="13dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:src="@drawable/baseline_search_24"
                    android:tint="@color/midgreen" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/searchBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/search_tasks_descriptions"
                    android:textColor="@color/midgreen"
                    android:textColorHint="@color/midgreen"
                    android:textSize="16sp" />
            </LinearLayout>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/availableChip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:chipSpacingHorizontal="8dp"
            app:chipSpacingVertical="8dp"
            app:singleLine="false" />

        <TextView
            android:id="@+id/filteredTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:letterSpacing="0.09"
            android:text="@string/filtered_results"
            android:textColor="@color/midgreen"
            android:visibility="gone"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tvNoResults"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/no_results_found"
                android:textColor="@color/midgreen"
                android:textSize="18sp"
                android:visibility="visible" />
        </FrameLayout>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>